--- a/Baro.CoreLibrary/Baro.CoreLibrary.CF.csproj
+++ b/Baro.CoreLibrary/Baro.CoreLibrary.CF.csproj
@@ -329,6 +329,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CoordSys\CoordSysGoogle.cs" />
+    <Compile Include="CoordSys\CoordSysTools.cs" />
     <Compile Include="Core\RegistryUtils.cs" />
     <Compile Include="UI\Controls\Lines.cs" />
     <Compile Include="Web\FileCompletedEventArg.cs" />
