--- a/Baro.CoreLibrary/Baro.CoreLibrary.Net.csproj
+++ b/Baro.CoreLibrary/Baro.CoreLibrary.Net.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Collections\SynchHashSet.cs" />
     <Compile Include="Collections\SynchList.cs" />
     <Compile Include="Collections\SynchQueue.cs" />
+    <Compile Include="Compression\LZF.cs" />
     <Compile Include="Configuration\ConfigIni.cs" />
     <Compile Include="Configuration\ConfigIniSection.cs" />
     <Compile Include="Configuration\ConfigRepositoryException.cs" />
