--- a/Baro.CoreLibrary/Baro.CoreLibrary.Net.csproj
+++ b/Baro.CoreLibrary/Baro.CoreLibrary.Net.csproj
@@ -92,6 +92,7 @@
     <Compile Include="CoordSys\CoordSysOSGB.cs" />
     <Compile Include="Core\ConsoleHelper.cs" />
     <Compile Include="Core\DescriptionAttribute.cs" />
+    <Compile Include="Core\FastHex.cs" />
     <Compile Include="Core\RandomC5.cs" />
     <Compile Include="Core\SystemDLL.cs" />
     <Compile Include="Core\ThreadSafeRandom.cs" />
