--- a/trunk/Baro.CoreLibrary/Baro.CoreLibrary.Net.csproj
+++ b/trunk/Baro.CoreLibrary/Baro.CoreLibrary.Net.csproj
@@ -133,6 +133,21 @@
     <Compile Include="GdiPlus\Shapes.cs" />
     <Compile Include="GdiPlus\STATSTG.cs" />
     <Compile Include="GdiPlus\Stubs.cs" />
+    <Compile Include="HAC\Algorithm\AbstractCriterionAlgorithm.cs" />
+    <Compile Include="HAC\Algorithm\DistanceCriterionAlgorithm.cs" />
+    <Compile Include="HAC\Algorithm\NumberCriterionAlgorithm.cs" />
+    <Compile Include="HAC\Cluster.cs" />
+    <Compile Include="HAC\ClusterPair.cs" />
+    <Compile Include="HAC\ClusterPairs.cs" />
+    <Compile Include="HAC\Element.cs" />
+    <Compile Include="HAC\Fusions\AvgLinkage.cs" />
+    <Compile Include="HAC\Fusions\CompleteLinkage.cs" />
+    <Compile Include="HAC\Fusions\Fusion.cs" />
+    <Compile Include="HAC\Fusions\SingleLinkage.cs" />
+    <Compile Include="HAC\HacStart.cs" />
+    <Compile Include="HAC\Metrics\EDistance.cs" />
+    <Compile Include="HAC\Metrics\IDistanceMetric.cs" />
+    <Compile Include="HAC\Metrics\JaccardDistance.cs" />
     <Compile Include="Ray\DataSource\DataSourceProxy.cs" />
     <Compile Include="Ray\DataSource\IRayDataSource.cs" />
     <Compile Include="Ray\DataSource\RayDataSourceXml.cs" />
