--- a/trunk/Baro.CoreLibrary/Baro.CoreLibrary.CF.csproj
+++ b/trunk/Baro.CoreLibrary/Baro.CoreLibrary.CF.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{B0D6E9D2-C7C7-4F09-A353-89D962B2F058}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -328,9 +328,14 @@
     <Content Include="UI\UI Controls.txt" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Compression\LZF.cs" />
     <Compile Include="CoordSys\CoordSysGoogle.cs" />
     <Compile Include="CoordSys\CoordSysTools.cs" />
+    <Compile Include="Core\FastHex.cs" />
     <Compile Include="Core\RegistryUtils.cs" />
+    <Compile Include="GIS\QuickHull.cs" />
+    <Compile Include="Spatial\RTreeMemory.cs" />
+    <Compile Include="Spatial\TreeNodes.cs" />
     <Compile Include="UI\Controls\Lines.cs" />
     <Compile Include="Web\FileCompletedEventArg.cs" />
     <Compile Include="Web\FileErrorEventArg.cs" />
