--- a/trunk/Baro.CoreLibrary/Baro.CoreLibrary.Net.csproj
+++ b/trunk/Baro.CoreLibrary/Baro.CoreLibrary.Net.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Core\ThreadStaticBuffer.cs" />
     <Compile Include="Core\TryCatch.cs" />
     <Compile Include="Core\UniqueID.cs" />
+    <Compile Include="GIS\PolygonClipper.cs" />
     <Compile Include="GIS\QuickHull.cs" />
     <Compile Include="HAC\Algorithm\AbstractCriterionAlgorithm.cs" />
     <Compile Include="HAC\Algorithm\DistanceCriterionAlgorithm.cs" />
