--- a/trunk/Baro.CoreLibrary/Baro.CoreLibrary.Net.csproj
+++ b/trunk/Baro.CoreLibrary/Baro.CoreLibrary.Net.csproj
@@ -149,6 +149,19 @@
     <Compile Include="Serializer3\MessageRegistration.cs" />
     <Compile Include="Serializer3\MessageSettings.cs" />
     <Compile Include="Serializer3\MessageUtils.cs" />
+    <Compile Include="SharpConfig\Comment.cs" />
+    <Compile Include="SharpConfig\CommentCollection.cs" />
+    <Compile Include="SharpConfig\Configuration.cs" />
+    <Compile Include="SharpConfig\Configuration.Deserialization.cs" />
+    <Compile Include="SharpConfig\Configuration.Parsing.cs" />
+    <Compile Include="SharpConfig\Configuration.Serialization.cs" />
+    <Compile Include="SharpConfig\ParseFlags.cs" />
+    <Compile Include="SharpConfig\ParserException.cs" />
+    <Compile Include="SharpConfig\Setting.cs" />
+    <Compile Include="SharpConfig\SettingCategory.cs" />
+    <Compile Include="SharpConfig\SettingCategoryCollection.cs" />
+    <Compile Include="SharpConfig\SettingCollection.cs" />
+    <Compile Include="SharpConfig\SettingValueCastException.cs" />
     <Compile Include="Spatial\RTreeMemory.cs" />
     <Compile Include="Spatial\TreeNodes.cs" />
     <Compile Include="Text\Encoding.cs" />
@@ -294,6 +307,7 @@
     <Content Include="AAA2\users.xml" />
     <Content Include="Ray\Xml\groups.xml" />
     <Content Include="Ray\Xml\users.xml" />
+    <Content Include="SharpConfig\Version.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="AAA2\aaav1.xsd">
