--- a/Baro.CoreLibrary/Baro.CoreLibrary.Net.csproj
+++ b/Baro.CoreLibrary/Baro.CoreLibrary.Net.csproj
@@ -23,10 +23,10 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DocumentationFile>
-    </DocumentationFile>
+    <DocumentationFile>bin\Debug\Baro.CoreLibrary.Net.XML</DocumentationFile>
     <Prefer32Bit>false</Prefer32Bit>
     <UseVSHostingProcess>true</UseVSHostingProcess>
+    <NoWarn>1591,612</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -36,9 +36,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DocumentationFile>
-    </DocumentationFile>
+    <DocumentationFile>bin\Release\Baro.CoreLibrary.Net.XML</DocumentationFile>
     <Prefer32Bit>false</Prefer32Bit>
+    <NoWarn>1591,612</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>false</SignAssembly>
@@ -56,12 +56,8 @@
       <HintPath>packages\MongoDB.Bson.2.0.1\lib\net45\MongoDB.Bson.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="MongoDB.Driver, Version=2.0.1.27, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\MongoDB.Driver.2.0.1\lib\net45\MongoDB.Driver.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="MongoDB.Driver.Core, Version=2.0.1.27, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\MongoDB.Driver.Core.2.0.1\lib\net45\MongoDB.Driver.Core.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="SharpKml, Version=2.1.0.0, Culture=neutral, PublicKeyToken=9bb853c026a5c0ac, processorArchitecture=MSIL">
@@ -113,10 +109,8 @@
     <Compile Include="CoordSys\CoordSysMercator.cs" />
     <Compile Include="CoordSys\CoordSysOSGB.cs" />
     <Compile Include="CoordSys\CoordSysTools.cs" />
-    <Compile Include="Core\ByteOrder.cs" />
     <Compile Include="Core\ConsoleHelper.cs" />
     <Compile Include="Core\DescriptionAttribute.cs" />
-    <Compile Include="Core\ErrorCodes.cs" />
     <Compile Include="Core\FastHex.cs" />
     <Compile Include="Core\RandomC5.cs" />
     <Compile Include="Core\ShortGuid.cs" />
@@ -128,18 +122,16 @@
     <Compile Include="Core\ValidEmail.cs" />
     <Compile Include="Core\WildcardFilter.cs" />
     <Compile Include="GIS\GooglePoints.cs" />
-    <Compile Include="GIS\KmlConversionV1.cs" />
-    <Compile Include="GIS\Mitab.cs" />
-    <None Include="GIS\MongoTableV3.cs" />
+    <Compile Include="GIS\mi\mitab.cs" />
+    <Compile Include="GIS\mi\MitabColumns.cs" />
+    <None Include="GIS\mi\MitabEx.cs" />
     <Compile Include="GIS\MsPointCompression.cs" />
-    <Compile Include="GIS\OGC\BoundingBox.cs" />
-    <Compile Include="GIS\OGC\Coordinate.cs" />
-    <Compile Include="GIS\OGC\CoordinateCollection.cs" />
     <Compile Include="GIS\OGC\DistanceUnits.cs" />
     <Compile Include="GIS\OGC\Extensions.cs" />
-    <Compile Include="GIS\OGC\Geometry.cs" />
-    <Compile Include="GIS\OGC\GeometryCollection.cs" />
-    <Compile Include="GIS\OGC\GeometryType.cs" />
+    <Compile Include="GIS\OGC\Internals\ByteOrder.cs" />
+    <Compile Include="GIS\OGC\Internals\NumberReader.cs" />
+    <Compile Include="GIS\OGC\Internals\WKBShapeType.cs" />
+    <Compile Include="GIS\OGC\Internals\XmlUtilities.cs" />
     <Compile Include="GIS\OGC\IO\BaseFeed.cs" />
     <Compile Include="GIS\OGC\IO\BaseTextFeed.cs" />
     <Compile Include="GIS\OGC\IO\BingDataSourceFeed.cs" />
@@ -150,35 +142,39 @@
     <Compile Include="GIS\OGC\IO\GeoJsonFeed.cs" />
     <Compile Include="GIS\OGC\IO\GeoRssFeed.cs" />
     <Compile Include="GIS\OGC\IO\Gml.cs" />
+    <Compile Include="GIS\OGC\IO\GpxFeed.cs" />
     <Compile Include="GIS\OGC\IO\KmlFeed.cs" />
-    <Compile Include="GIS\OGC\IO\NumberReader.cs" />
     <Compile Include="GIS\OGC\IO\ServiceHelper.cs" />
     <Compile Include="GIS\OGC\IO\ShapefileReader.cs" />
     <Compile Include="GIS\OGC\IO\WellKnownBinary.cs" />
     <Compile Include="GIS\OGC\IO\WellKnownText.cs" />
-    <Compile Include="GIS\OGC\IO\WKBShapeType.cs" />
-    <Compile Include="GIS\OGC\IO\XmlUtilities.cs" />
-    <Compile Include="GIS\OGC\LineString.cs" />
+    <Compile Include="GIS\OGC\Models\BoundingBox.cs" />
+    <Compile Include="GIS\OGC\Models\Coordinate.cs" />
+    <Compile Include="GIS\OGC\Models\CoordinateCollection.cs" />
     <Compile Include="GIS\OGC\Models\DBaseColumnDescription.cs" />
     <Compile Include="GIS\OGC\Models\DBaseFile.cs" />
     <Compile Include="GIS\OGC\Models\DBaseFileHeader.cs" />
+    <Compile Include="GIS\OGC\Models\Geometry.cs" />
+    <Compile Include="GIS\OGC\Models\GeometryCollection.cs" />
+    <Compile Include="GIS\OGC\Models\GeometryType.cs" />
+    <Compile Include="GIS\OGC\Models\LineString.cs" />
+    <Compile Include="GIS\OGC\Models\MultiLineString.cs" />
+    <Compile Include="GIS\OGC\Models\MultiPoint.cs" />
+    <Compile Include="GIS\OGC\Models\MultiPolygon.cs" />
+    <Compile Include="GIS\OGC\Models\Point.cs" />
+    <Compile Include="GIS\OGC\Models\Polygon.cs" />
     <Compile Include="GIS\OGC\Models\ShapeFileShapeType.cs" />
     <Compile Include="GIS\OGC\Models\ShapeMetadata.cs" />
     <Compile Include="GIS\OGC\Models\ShapeStyle.cs" />
     <Compile Include="GIS\OGC\Models\SpatialDataSet.cs" />
     <Compile Include="GIS\OGC\Models\StyleColor.cs" />
-    <Compile Include="GIS\OGC\MultiLineString.cs" />
-    <Compile Include="GIS\OGC\MultiPoint.cs" />
-    <Compile Include="GIS\OGC\MultiPolygon.cs" />
-    <Compile Include="GIS\OGC\Point.cs" />
-    <Compile Include="GIS\OGC\Polygon.cs" />
+    <Compile Include="GIS\OGC\SpatialTools.cs" />
     <Compile Include="GIS\PolygonClipper.cs" />
     <Compile Include="GIS\QuickHull.cs" />
     <Compile Include="GIS\SpatialIndexes\Envelope.cs" />
     <Compile Include="GIS\SpatialIndexes\RTree.cs" />
     <Compile Include="GIS\SpatialIndexes\RTreeNode.cs" />
     <Compile Include="GIS\SpatialIndexes\StackExtensions.cs" />
-    <Compile Include="GIS\SpatialTools.cs" />
     <Compile Include="Google\GeocodeAPI.cs" />
     <Compile Include="HAC\Algorithm\AbstractCriterionAlgorithm.cs" />
     <Compile Include="HAC\Algorithm\DistanceCriterionAlgorithm.cs" />
@@ -264,7 +260,6 @@
     <Compile Include="Media\SoundPlayer.cs" />
     <Compile Include="Core\App2.cs" />
     <Compile Include="Core\NativeMethods.cs" />
-    <Compile Include="Core\StopWatch.cs" />
     <Compile Include="Core\SystemTime.cs" />
     <Compile Include="Serializer\Message.cs" />
     <Compile Include="Serializer\MessageCrcException.cs" />
@@ -322,6 +317,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="AAA2\users.xml" />
+    <Content Include="mitab.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="mitab64.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Ray\Xml\groups.xml" />
     <Content Include="Ray\Xml\users.xml" />
   </ItemGroup>
